# ranting-jatuh-node

./: .clangd  .copilotignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  mqtt_interface.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/board/include/: pins.hpp
components/dashboard/: CMakeLists.txt  Kconfig  dashboard.cpp
components/dashboard/include/: dashboard.hpp
components/filter/: CMakeLists.txt  ekf_filter.cpp  idf_component.yml
components/filter/include/: adaptive_complementary_filter.hpp  complementary_filter.hpp  ekf_filter.hpp  filter_math.hpp  kalman_filter.hpp  madgwick_filter.hpp
components/logger/: CMakeLists.txt  Kconfig  logger.cpp  logger_mqtt.cpp  logger_storage.cpp  network_on_demand.cpp  network_persistent.cpp  network_task.cpp  outbox.cpp
components/logger/include/: logger.hpp  logger_internal.hpp  mqtt_log.hpp  network_strategy.hpp  network_task.hpp  outbox.hpp
components/lsm6ds3/: CMakeLists.txt  lsm6ds3.cpp
components/lsm6ds3/include/: lsm6ds3.hpp  lsm6ds3_detail.hpp
components/monitor/: CMakeLists.txt  Kconfig  monitor.cpp
components/monitor/include/: calibration.hpp  (+3 more)
docs/: unified_architecture.excalidraw
imu_algorithms/: __init__.py  _calibration.py  _detection.py  _envelope.py  _extraction.py  _io.py  _ringbuffer.py
main/: CMakeLists.txt  Kconfig  main.cpp  pins.hpp  raw_logger_main.cpp  test_main.cpp  verify.cpp  verify.hpp
notebook/: NOTES.md  RULES.md  adaptive_complementary_filter.py  analysis.ipynb  calibration.py  complementary_filter.py  disturbance_detection.py  exploration.ipynb  mahony_filter.py  natural_frequency.py
notebook/algorithms/: biomechanical.py  calibration.py  disturbance.py  dsp_pipeline.py
notes/: damping-followup.md  damping-followup.original.md
scripts/: debug_analyze.py
(+238 files in other folders)
